Colab을 통해 생성됨

--- a/03_신경망.ipynb
+++ b/03_신경망.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBNy2WHi7+9Y+7+4bCqEpy",
+      "authorship_tag": "ABX9TyOYjJu2Y+aV6b1J9S1u8HH+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,22 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# 활성화 함수(activation function) : 입력 신호의 총합을 출력 신호로 변환하는 함수"
+      ],
       "metadata": {
         "id": "bXrosf45SBHw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OVjTVdkNSVZi"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
