--- a/03_신경망.ipynb
+++ b/03_신경망.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "mount_file_id": "15kXbdjbGVLnNr9Q5ey64nKM2Byqj4Oz2",
-      "authorship_tag": "ABX9TyNT7tR3Fy2wxt4xBENzFr6f",
+      "mount_file_id": "https://github.com/insu97/Deep-Learning-from-Scratch1/blob/main/03_%EC%8B%A0%EA%B2%BD%EB%A7%9D.ipynb",
+      "authorship_tag": "ABX9TyOuKKs2xnUbiOB+N+N2RQby",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,7 +113,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m3ckNBKDS1U-",
-        "outputId": "c3f979cb-d977-40cc-b159-9a1830f38bfa"
+        "outputId": "b412d540-23dc-4a76-beea-67bc9a3ae3fd"
       },
       "execution_count": 3,
       "outputs": [
@@ -148,7 +147,7 @@
           "height": 430
         },
         "id": "ZLwpFiSES_S1",
-        "outputId": "117a56d0-d6ac-4f47-c1fc-6db8b99add0e"
+        "outputId": "1871b2f9-61ab-4762-b525-44ec98b9d01a"
       },
       "execution_count": 4,
       "outputs": [
@@ -182,7 +181,7 @@
       "metadata": {
         "id": "jB8392ORUuE9"
       },
-      "execution_count": 73,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -197,9 +196,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bu-v_a3LRek6",
-        "outputId": "7e2efe55-5a77-4500-fded-72b0cfe333dd"
+        "outputId": "05407ca9-ada0-4171-96a7-62c0bee887da"
       },
-      "execution_count": 74,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,7 +208,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 74
+          "execution_count": 6
         }
       ]
     },
@@ -236,7 +235,7 @@
       "metadata": {
         "id": "NkIST0MDRY2v"
       },
-      "execution_count": 113,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -253,7 +252,7 @@
       "metadata": {
         "id": "yceJpQodXHej"
       },
-      "execution_count": 127,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -284,7 +283,7 @@
       "metadata": {
         "id": "G9s6CNpMbINx"
       },
-      "execution_count": 126,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -299,9 +298,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0WXx1sVFUxSM",
-        "outputId": "435b78f4-e828-4e79-f3aa-cddc3e09a1b1"
+        "outputId": "f8af2429-6e3e-4c7a-c6e2-601afa3c662f"
       },
-      "execution_count": 112,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +310,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 112
+          "execution_count": 10
         }
       ]
     },
@@ -331,9 +330,9 @@
           "height": 430
         },
         "id": "PeaB9tc-U0U0",
-        "outputId": "8170f12d-98c7-4208-df04-4afd60ab5e72"
+        "outputId": "2029a9a8-09d5-4d7f-abef-4fae56b62fe6"
       },
-      "execution_count": 70,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -365,7 +364,7 @@
       "metadata": {
         "id": "eLq5lteZZpKw"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -384,9 +383,9 @@
           "height": 430
         },
         "id": "7f0OrM7WZqZQ",
-        "outputId": "639dba6c-9af7-4aa8-ce70-1f28b5d0fbd7"
+        "outputId": "ef62034e-1571-4d07-fadb-7b1dce2c73fe"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -427,7 +426,7 @@
       "metadata": {
         "id": "FXyEo7SlcvN7"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -443,9 +442,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SH4tID9Rc8GO",
-        "outputId": "9fea501a-7d2a-4ff6-e648-8b0d3e719277"
+        "outputId": "8f84d981-09f0-4e82-9d49-41f785e6ee8c"
       },
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,7 +454,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 15
         }
       ]
     },
@@ -469,9 +468,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w1c2tgRpdZil",
-        "outputId": "b72b7d8d-7346-4cf2-dc93-121fbdef6a05"
+        "outputId": "622bbff4-9aab-4eed-f91d-e2d8e029f1e1"
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,7 +480,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 16
         }
       ]
     },
@@ -511,7 +510,7 @@
       "metadata": {
         "id": "XPDZ-5L9aiyI"
       },
-      "execution_count": 13,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -523,7 +522,7 @@
       "metadata": {
         "id": "wX3Auusna789"
       },
-      "execution_count": 14,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -545,7 +544,7 @@
       "metadata": {
         "id": "2Qy8ko21a1_l"
       },
-      "execution_count": 15,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -562,9 +561,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wW-uv078a_Zj",
-        "outputId": "5be4b96c-33a1-4293-82b2-706ebb86745c"
+        "outputId": "b6dd4d1d-626b-451a-cbc0-57680667605d"
       },
-      "execution_count": 16,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,22 +598,46 @@
     {
       "cell_type": "code",
       "source": [
-        "%cd '/content/drive/MyDrive/Deep-Learning-from-Scratch/01/03-신경망/'"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "cCL14l8oI_iH",
+        "outputId": "e2bec68c-8fe9-4a9b-cf32-03e59a189e58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd '/content/drive/MyDrive/Deep-Learning-from-Scratch/01/'"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IJcS2cHMqgR1",
-        "outputId": "6ca37568-6da4-4c3b-8792-3822fecc3eae"
+        "outputId": "8f466885-35c4-4b49-ecf4-afa5d57fc321"
       },
-      "execution_count": 17,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/drive/MyDrive/Deep-Learning-from-Scratch/01/03-신경망\n"
+            "/content/drive/MyDrive/Deep-Learning-from-Scratch/01\n"
           ]
         }
       ]
@@ -624,12 +647,12 @@
       "source": [
         "import sys, os\n",
         "sys.path.append(os.pardir)\n",
-        "from mnist import load_mnist"
+        "from dataset.mnist import load_mnist"
       ],
       "metadata": {
         "id": "XD8xq4-NplwO"
       },
-      "execution_count": 18,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -638,39 +661,10 @@
         "(x_train, t_train), (x_test, t_test) = load_mnist(flatten=True, normalize=False)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gVDAa_K6ptI7",
-        "outputId": "8b137ed3-9512-4ddb-fe27-c2ec9d2ef2dc"
+        "id": "gVDAa_K6ptI7"
       },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading train-images-idx3-ubyte.gz ... \n",
-            "Done\n",
-            "Downloading train-labels-idx1-ubyte.gz ... \n",
-            "Done\n",
-            "Downloading t10k-images-idx3-ubyte.gz ... \n",
-            "Done\n",
-            "Downloading t10k-labels-idx1-ubyte.gz ... \n",
-            "Done\n",
-            "Converting train-images-idx3-ubyte.gz to NumPy Array ...\n",
-            "Done\n",
-            "Converting train-labels-idx1-ubyte.gz to NumPy Array ...\n",
-            "Done\n",
-            "Converting t10k-images-idx3-ubyte.gz to NumPy Array ...\n",
-            "Done\n",
-            "Converting t10k-labels-idx1-ubyte.gz to NumPy Array ...\n",
-            "Done\n",
-            "Creating pickle file ...\n",
-            "Done!\n"
-          ]
-        }
-      ]
+      "execution_count": 24,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -685,9 +679,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e80fd887-8156-44d5-d890-af53d923c9cc"
+        "outputId": "cd86d836-f749-4db6-80fe-e62b5f68674c"
       },
-      "execution_count": 115,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,7 +705,7 @@
       "metadata": {
         "id": "P9jr9Z00Ot8Y"
       },
-      "execution_count": 116,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -722,21 +716,21 @@
       "metadata": {
         "id": "1GENu0AnQIFj"
       },
-      "execution_count": 117,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def init_network():\n",
-        "    with open(\"sample_weight.pkl\", 'rb') as f:\n",
+        "    with open(\"dataset/sample_weight.pkl\", 'rb') as f:\n",
         "        network = pickle.load(f)\n",
         "    return network"
       ],
       "metadata": {
         "id": "7ZHHisgqO9r9"
       },
-      "execution_count": 118,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -758,7 +752,7 @@
       "metadata": {
         "id": "VvSFCKdfPBCN"
       },
-      "execution_count": 132,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -770,7 +764,7 @@
       "metadata": {
         "id": "bEXIcfBhPKab"
       },
-      "execution_count": 133,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -786,7 +780,7 @@
       "metadata": {
         "id": "gSpokDVNPNbz"
       },
-      "execution_count": 134,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -799,9 +793,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D9-_N-BeQN2A",
-        "outputId": "08d7a351-27ea-40ea-975d-3c96cfcd6201"
+        "outputId": "9d347f0c-bebb-4cf8-84d2-3c38ef9e9198"
       },
-      "execution_count": 135,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,7 +824,7 @@
       "metadata": {
         "id": "w38wPu2db2kb"
       },
-      "execution_count": 136,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -852,9 +846,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "71RsDzcgb4qC",
-        "outputId": "1c8d0f8e-3431-4899-b7a5-e6686a6f9a32"
+        "outputId": "a9f414f9-09ee-47fd-ce9c-5a564f86e5d0"
       },
-      "execution_count": 137,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
