Colab을 통해 생성됨

--- a/06_학습_관련_기술들.ipynb
+++ b/06_학습_관련_기술들.ipynb
@@ -37,15 +37,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W5BO9w_mGAoK",
-        "outputId": "781ac25c-9a71-4281-c1cc-26942e327db9"
+        "outputId": "1c6866f5-a01c-4fdd-b3a4-d0054dbee0f0"
       },
-      "execution_count": 1,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -60,9 +60,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UXsJtL5bGBB-",
-        "outputId": "e8cb6899-61e1-4453-b752-0c155ade7d2a"
+        "outputId": "266e2406-8785-412f-fb8c-1424926c1e72"
       },
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "ZvWIkrUccwqR"
       },
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
       "metadata": {
         "id": "nX2ylx_DAJy4"
       },
-      "execution_count": 3,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "6ZouUaz1JDOn"
       },
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "d72upqWAa2T6"
       },
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
       "metadata": {
         "id": "62XafndXbPHq"
       },
-      "execution_count": 6,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -275,7 +275,7 @@
       "metadata": {
         "id": "JJZe4iuXcjSE"
       },
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -313,7 +313,7 @@
       "metadata": {
         "id": "4BYOwOFncq3S"
       },
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": []
     },
     {
